# pinger

./: .gitignore  Cargo.toml  a_generer.txt  adresses.txt  adresses_template.txt  pinger.conf  readme.md
src/: generate_addr_file.rs  main.rs  pinged.rs  settings.rs
