[package]
name = "pinger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pinger"
path = "src/main.rs"

[[bin]]
name = "generate_addr_file"
path = "src/generate_addr_file.rs"

[dependencies]
surge-ping = "0.8.1"
futures = "0.3.30"
rand = "0.8.5"
tokio = {version = "1.38.0", features = ["rt", "time", "rt-multi-thread", "macros"] }
tokio-macros = "2.3.0"
chrono = "0.4.38"
toml = "0.8.14"